--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "@nestjs/graphql": "^5.4.0",
+    "@nestjs/typeorm": "^5.2.2",
     "apollo-server-express": "^2.1.0",
     "graphql": "^14.0.2",
+    "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.0",
+    "graphql-yoga": "^1.16.2",
+    "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
+    "typeorm": "^0.2.7",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
