--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,18 @@
     "version": "0.2.0",
     "configurations": [
       {
+        "type": "node",
+        "request": "launch",
+        "name": "Launch NestJs",
+        "runtimeExecutable": "npm",
+        "runtimeArgs": [
+          "run-script",
+          "start:dev"
+        ],
+        "port": 5000,
+        "cwd":"${workspaceFolder}"
+      },
+      {
         "name": "Launch via nodemon",
         "type": "node",
         "request": "launch",
